--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
   /* All unordered list tags */
   ul {
     text-align: center;
-    font-size: 35px;
+    font-size: 15px;
     /* Give an element a solid border. */
     border-style: solid;
     /* Render the border 5 pixels thick. */
     border-width: 5px;
     /* Include bullets in the content flow. */
     /* More info here: http://www.w3schools.com/cssref/pr_list-style-position.asp */
-    list-style-position: inside;
+/*     list-style-position: inside; */
   }
 </style>
 </head>
