--- a/index.html
+++ b/index.html
@@ -60,8 +60,19 @@
     border-width: 5px;
     /* Include bullets in the content flow. */
     /* More info here: http://www.w3schools.com/cssref/pr_list-style-position.asp */
-/*     list-style-position: inside; */
+     list-style-position: inside;
   }
+   table {
+  width: 100%;
+} 
+   th {
+  height: 70px;
+     }
+   td {
+  text-align: center;
+} 
+ th, td {
+   padding: 15px;}   
 </style>
 </head>
 
