--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     /* The background of the heading element will now be black. */
     background-color: black;
   }
+   h3 {
+    margin-top: 15px;
+    font-size: 20px;
+    text-align: center;
+  }
 
 
 
@@ -92,8 +97,11 @@
     <li> <a href="https://github.com/RanjaniAnjurVenkatraman/python-api-challenge"><b>Git</b></a></li>
     <li><a href="https://www.linkedin.com/in/ranjani-anjur-venkatraman-a482a912b/"><b>Linkedin</b></a></li>
   </ul>
+  
+  <h3>Interests</h3>
 
   <table border = '1'>
+    
     <tr>
       <th>Books</th>
       <th>Movies</th>
