--- a/index.html
+++ b/index.html
@@ -361,11 +361,8 @@
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="row">
-            <div class="col-md-4 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-              <div class="card-body cc-experience-header">
-
+ </div>
+</div>
 
 <div class="section" id="skill">
   <div class="container">
