--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Data Science and Analytics Boot Camp</div>
-            <h6 style="color: darkgrey;">Georgia Institute Of Technology, Atlanta</h6>
+            <h6 style="color: darkgrey;">Georgia Institute Of Technology, Atlanta, GA, US</h6>
             <p>Advanced Excel, Fundamental Statistics, Python Programming, API Interactions, Data Mining, Web scraping, Databases - Postgres, MongoDB, Front-End Web Visualization - HTML, CSS, Bootstrap, Dashboarding, JavaScript, D3.js, Geomapping with Leaflet.js, Business Intelligence Software - Tableau, Big Data Analytics with Hadoop, Machine Learning, Deep Learning</p>
           </div>
         </div>
@@ -212,7 +212,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Master of Science in Information Systems - Big Data Management and Analytics</div>
-            <h6 style="color: darkgrey;">Georgia State University, Atlanta, US</h6>
+            <h6 style="color: darkgrey;">Georgia State University, Atlanta, GA, US</h6>
             
           </div>
         </div>
@@ -250,7 +250,7 @@
           <div class="card-body">
             <p>Performed descriptive, predictive, and prescriptive analytics in this project. Hosted jupyter on EC2 instance of Aws cloud<br>Utilized Power Bi to explore and visualize the data. A recommendation is performed using association rule and collaborative filtering<br>Implemented XGBoost, LightGBM, Association rule, Random Forest, Logistic regression modeling to check if the following item for a given product is bought together or not</p>
             <p><strong>Technologies Used:</strong></p>
-            <p>Surprise, AWS cloud | Python | Power Bi| Association rule| XGBoost| LightGBM | Random Forest| Logistic regression </p>
+            <p> AWS cloud | Python | Power Bi| Association rule| XGBoost| LightGBM | Random Forest| Logistic regression </p>
           </div>
         </div>
       </div>
