added new project

--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
         </div>
         <div class="col-md-8" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <p>Retrieved last 30 days world covid data from disease.sh API to analyze the current global trend</p>
-	    <p> Performed regression analysis, correaltion matrix and hypothesis testing
+            <p>Analyzed the recent 30 days covid data to find the correlation between vaccine and covid count.</p>
+	    <p>Performed visualization using Gmaps, Heatmap, Linear regression and Augmented Dickey Fuller hypothesis testing
             <p><strong>Technologies Used:</strong></p>
-            <p>Python | Stats| NumPy | Pandas | Matplotlib</p>
+            <p>Python | Stats| NumPy | Pandas | Matplotlib | Gmaps | Request</p>
           </div>
         </div>
       </div>
@@ -339,7 +339,7 @@
               <div class="card-body">
                 <p>Web application that scrapes various websites for data related to the Mission to Mars using various web scraping techniques. Stored the scraped data using MongoDB and created a Flask template app that will query the database to pass the mars data into a single HTML page.</p>
                 <p><strong>Technologies Used:</strong></p>
-                <p>Beautiful Soup | Requests | Selenium | Splinter | MongoDB | Flask | Pandas</p>
+                <p>Beautiful Soup | Requests | Splinter | MongoDB | Flask | Pandas</p>
               </div>
             </div>
           </div>
@@ -349,14 +349,14 @@
             <div class="col-md-4 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
               <div class="card-body cc-experience-header">
                 
-                <div class="h5">Climate Analysis – API Calls and Web Visualization Dashboard</div>
+                <div class="h5">Analysis on Global Pharmaceutical spending</div>
               </div>
             </div>
             <div class="col-md-8" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
               <div class="card-body">
-                <p>Build a visualization dashboard and analyzed the weather of 500+ cities across the world, utilizing citipy - Python Library and OpenWeatherMap API to understand the relation between latitude and different climate parameters.</p>
-                <p><strong>Technologies Used:</strong></p>
-                <p>Python | Pandas | Matplotlib | API Calls</p>
+                <p>Developed an ETL process by retrieving data from two sources (CSV, JSON), filtering/cleaning the data in pandas, and storing the merged data in Postgres SQL to gather information on % of pharmaceutical spending. Using flask and sql alchemy deployed pharma web application.</p>
+		<p><strong>Technologies Used:</strong></p>
+                <p>Postgres SQL | Pandas | SQL Alchemy | Flask</p>
               </div>
             </div>
           </div>
@@ -375,7 +375,7 @@
       Micro Masters in Data Science and Statistics, MIT(Ongoing) </li>
     <li>
       <i class="fa-li fa fa-certificate text-warning"></i>
-      Complete SQL, Udemy</li>
+      Data Science and Analytics Boot Camp, Georgia Institute of Technology</li>
 
   </ul>
 </div>
